fixes in nav bar and spacing in medium screen on film work page

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ a,span{
 	color: black;
 }
 
+a:hover{
+	font-weight: bold;
+}
+
 html{
     font-family: 'Playfair Display', serif;
 }
